--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-cors": "^3.0",
         "flipbox/lumen-generator": "^9.1",
         "laravel/lumen-framework": "^8.3.1",
         "tymon/jwt-auth": "^1.0"
